--- a/3.x/logging-interceptor/okhttp3/logging/LoggingEventListener.html
+++ b/3.x/logging-interceptor/okhttp3/logging/LoggingEventListener.html
@@ -8,6 +8,7 @@
 <meta name="date" content="2019-03-14">
 <link rel="stylesheet" type="text/css" href="../../stylesheet.css" title="Style">
 <script type="text/javascript" src="../../script.js"></script>
+<link rel="canonical" href="https://square.github.io/okhttp/4.x/okhttp-logging-interceptor/okhttp3.logging/-logging-event-listener/"/>
 </head>
 <body>
 <script type="text/javascript"><!--
