--- a/3.x/okhttp/okhttp3/ConnectionSpec.Builder.html
+++ b/3.x/okhttp/okhttp3/ConnectionSpec.Builder.html
@@ -8,6 +8,7 @@
 <meta name="date" content="2019-03-13">
 <link rel="stylesheet" type="text/css" href="../stylesheet.css" title="Style">
 <script type="text/javascript" src="../script.js"></script>
+<link rel="canonical" href="https://square.github.io/okhttp/4.x/okhttp/okhttp3/-connection-spec/-builder/"/>
 </head>
 <body>
 <script type="text/javascript"><!--
